ajustes midia query

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p class="product-tag">Novo Lançamento</p>
                     <p class="product-name">Apple Watch Series 10</p>
                     <p class="description">
-                        O smartwatch mais avançado do mercado. Monitoramento completo de saúde, GPS integrado, tela AMOLED de alta resolução e bateria de longa duração. Perfeito para acompanhar seu estilo de vida ativo. 
+                        O smartwatch mais avançado do mercado. Monitoramento completo de saúde, GPS integrado, tela AMOLED de alta resolução e bateria de longa duração. 
                     </p>
                     <button class="btn">Saiba Mais </button>
 
@@ -60,7 +60,7 @@
                     <p class="product-name">Air Pods Max</p>
                     <p class="description">
                         Experimente o som em sua forma mais pura. Cancelamento de ruido adaptativo, qualidade de audio
-                        excepcional e design ergonomico para o maximo conforto . Sua musica nunca soou tão bem.
+                        excepcional e design ergonomico para o maximo conforto.
                     </p>
                     <button class="btn">Saiba Mais </button>
 
